test/compile_fail/program_declarations_nonempty.zig
const shift = @import("shift");

comptime {
    _ = shift.Program(.{}, struct {
        pub fn body(_: anytype) !i32 {
            return 0;
        }
    });
}
